--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "citas",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://educlerici.github.io/react-citas/",
   "dependencies": {
     "bootstrap": "^4.1.2",
+    "gh-pages": "^2.0.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5"
@@ -12,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
